// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledText Should render correctly with custom values 1`] = `
<Text
  style={
    {
      "color": "#FFD1AD",
      "fontFamily": "Archivo-ExtraBold",
      "fontSize": 40,
      "includeFontPadding": false,
      "textAlign": "right",
    }
  }
>
  This is a test
</Text>
`;

exports[`StyledText Should render correctly with default values 1`] = `
<Text
  style={
    {
      "color": "#000",
      "fontFamily": "Archivo-Regular",
      "fontSize": 18,
      "includeFontPadding": false,
      "textAlign": "right",
    }
  }
>
  This is a test
</Text>
`;
